# chainvoice

./: .gitignore  Dockerfile  README.rst  invconf.py  networks.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.openzeppelin/: dev-1026.json  dev-1600276774003.json  project.json
alembic/: env.py
alembic/versions/: 129092d2868b_.py  281fc4ff4ad4_drop_uniqueness_from_several_names.py  55320a5f5f8d_set_index_for_seller_id_in_catalog.py  6f107c3dbb23_relate_blockchain_contracts_to_parties_.py  c1f738e0734f_.py  d15f77151156_.py
app/: blockchain.py  config.py  db.py  deps.py  main.py  security.py
app/api/: api.py  base_api.py  blockchain_contract_api.py  catalog_api.py  catalog_item_api.py  invoice_api.py  ledger_state_api.py  login_api.py  notes.py  order_api.py  order_item_api.py  party_api.py  payment_api.py  user_api.py
app/contracts/: __init__.py  base_sc.py  chainvoice_erc1155_sc.py  client.py  invoice_registry_sc.py  utils.py
app/quorum/: ethclient.py
app/schemas/: __init__.py  base.py  blockchain_contract.py  catalog.py  catalog_item.py  eth.py  invoice.py  order.py  order_item.py  party.py  payment.py  token.py  user.py
chainvoice-client/: README.md  pyproject.toml
contract-tests/: ERC1155Payments.test.js  InvoiceRegistry.test.js
contracts/: Box.sol  ChainvoiceERC1155.sol  ChainvoiceToken.sol  InvoiceRegistry.sol
docs/: Chainvoice Diagrams.drawio
fixtures/: parties-catalogs.json
tasks/: __init__.py  admin_azure.py  apiclient.py  docker.py  fixtures.py  localdev.py  utils.py
tests/: test_notes.py
(+72 files in other folders)
