[tool.poetry]
name = "chainvoice"
version = "0.1.0"
description = ""
authors = ["Andriy Shapochka <ashapochka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.4.1"
ipython = "^7.18.1"
fastapi = {extras = ["all"], version = "^0.61.1"}
pytest = "^6.0.1"
python-dotenv = "^0.14.0"
sqlalchemy = "^1.3.19"
databases = {extras = ["postgresql"], version = "^0.3.2"}
pytest-asyncio = "^0.14.0"
httpx = "^0.14.3"
alembic = "^1.4.2"
passlib = {extras = ["argon2_cffi"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
argon2_cffi = "^20.1.0"
fastapi-utils = "^0.2.1"
openapi-python-client = "^0.5.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = [
    "poetry>=0.12",
#    "setuptools!=50.0",
    "wheel"
]
build-backend = "poetry.masonry.api"
